--- a/index.html
+++ b/index.html
@@ -4,11 +4,27 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="icon" href="/imgs/logomark.svg" type="image/icon type">
+  <title>AluraGeek</title>
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/css/header.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&family=Raleway:wght@400;500;600;700&display=swap">
 </head>
 <body>
-  <header>
-
+  <header class="header">
+    <div class="header__logo-search">
+      <img src="/imgs/logo.svg" alt="Logotipo da AluraGeek" class="header__logo">
+      <div class="header__search">
+        <input type="text" name="search" id="search" class="header__search--input" placeholder="O que deseja escontrar?">
+        <img class="header__search--icon" src="/imgs/searchicon.svg" alt="Botão de pesquisa">
+      </div>
+    </div>
+    <button class="header__login button">Login</button>
+    <div class="header__searchmobile">
+      <img class="header__search--icon" src="/imgs/searchiconmobile.svg" alt="Botão de pesquisa">
+    </div>
+    
   </header>
 
   <main>
