criado em index as sections banner e gallery, feito a programação html da section banner e feito toda a estilização responsiva do banner

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <link rel="icon" href="/imgs/logomark.svg" type="image/icon type">
   <title>AluraGeek</title>
   <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&family=Raleway:wght@400;500;600;700&display=swap">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="/css/header.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&family=Raleway:wght@400;500;600;700&display=swap">
+  <link rel="stylesheet" href="/css/banner.css">
 </head>
 <body>
   <header class="header">
@@ -24,11 +25,19 @@
     <div class="header__searchmobile">
       <img class="header__search--icon" src="/imgs/searchiconmobile.svg" alt="Botão de pesquisa">
     </div>
-    
   </header>
 
   <main>
+    <section class="banner">
+      <div class="banner__content">
+        <h1 class="banner__title">Dezembro Promocional</h1>
+        <p class="banner__text">Produtos selecionados com 33% de desconto</p>
+        <button class="banner__button button">Ver Consoles</button>
+      </div>
+    </section>
+    <section class="gallery">
 
+    </section>
   </main>
 
   <footer>
