alterado classe button para duas classes, whtbutton e bluebutton, ja estilizando as cores dos botoes e o hover no arquivo style.css, deixando para os arquivos css especificos somente a estilização do size width e height dos botoes. As mudanças foram aplicadas ao header e banner.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img class="header__search--icon" src="/imgs/searchicon.svg" alt="Botão de pesquisa">
       </div>
     </div>
-    <button class="header__login button">Login</button>
+    <button class="header__login whtbutton">Login</button>
     <div class="header__searchmobile">
       <img class="header__search--icon" src="/imgs/searchiconmobile.svg" alt="Botão de pesquisa">
     </div>
@@ -32,7 +32,7 @@
       <div class="banner__content">
         <h1 class="banner__title">Dezembro Promocional</h1>
         <p class="banner__text">Produtos selecionados com 33% de desconto</p>
-        <button class="banner__button button">Ver Consoles</button>
+        <button class="banner__button bluebutton">Ver Consoles</button>
       </div>
     </section>
     <section class="gallery">
