criado seção footer-developer responsiva

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="/css/main-banner.css">
   <link rel="stylesheet" href="/css/main-gallery.css">
   <link rel="stylesheet" href="/css/footer-aboutus.css">
+  <link rel="stylesheet" href="/css/footer-developer.css">
 </head>
 <body>
   <header class="header">
@@ -213,7 +214,7 @@
     </section>
 
     <section class="footer__developer">
-
+        <p class="footer__developer--text">Desenvolvido por Diego Ferreira<br>2022</p>
     </section>
   </footer>
 </body>
