--- a/index.html
+++ b/index.html
@@ -4,29 +4,29 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="/imgs/logomark.svg" type="image/icon type">
+  <link rel="icon" href="./imgs/logomark.svg" type="image/icon type">
   <title>AluraGeek</title>
-  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="./reset.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&family=Raleway:wght@400;500;600;700&display=swap">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="/css/header.css">
-  <link rel="stylesheet" href="/css/main-banner.css">
-  <link rel="stylesheet" href="/css/main-gallery.css">
-  <link rel="stylesheet" href="/css/footer-aboutus.css">
-  <link rel="stylesheet" href="/css/footer-developer.css">
+  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./css/header.css">
+  <link rel="stylesheet" href="./css/main-banner.css">
+  <link rel="stylesheet" href="./css/main-gallery.css">
+  <link rel="stylesheet" href="./css/footer-aboutus.css">
+  <link rel="stylesheet" href="./css/footer-developer.css">
 </head>
 <body>
   <header class="header">
     <div class="header__logo-search">
-      <img src="/imgs/logo.svg" alt="Logotipo da AluraGeek" class="header__logo">
+      <img src="./imgs/logo.svg" alt="Logotipo da AluraGeek" class="header__logo">
       <div class="header__search">
         <input type="text" name="search" id="search" class="header__search--input" placeholder="O que deseja escontrar?">
-        <img class="header__search--icon" src="/imgs/searchicon.svg" alt="Botão de pesquisa">
+        <img class="header__search--icon" src="./imgs/searchicon.svg" alt="Botão de pesquisa">
       </div>
     </div>
     <button class="header__login whtbutton">Login</button>
     <div class="header__searchmobile">
-      <img class="header__search--icon" src="/imgs/searchiconmobile.svg" alt="Botão de pesquisa">
+      <img class="header__search--icon" src="./imgs/searchiconmobile.svg" alt="Botão de pesquisa">
     </div>
   </header>
 
@@ -49,37 +49,37 @@
         </div>
         <div class="gallery__products">
           <div class="gallery__product">
-            <img class="gallery__product--img" src="/imgs/starwars-img1.png" alt="Imagem do produto XYF">
+            <img class="gallery__product--img" src="./imgs/starwars-img1.png" alt="Imagem do produto XYF">
             <p class="gallery__product--description">Produto XYF</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
           <div class="gallery__product">
-            <img class="gallery__product--img" src="/imgs/starwars-img2.png" alt="Imagem do produto XYF">
+            <img class="gallery__product--img" src="./imgs/starwars-img2.png" alt="Imagem do produto XYF">
             <p class="gallery__product--description">Produto XYF</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
           <div class="gallery__product">
-            <img class="gallery__product--img" src="/imgs/starwars-img3.png" alt="Imagem do produto XYF">
+            <img class="gallery__product--img" src="./imgs/starwars-img3.png" alt="Imagem do produto XYF">
             <p class="gallery__product--description">Produto XYF</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
           <div class="gallery__product">
-            <img class="gallery__product--img" src="/imgs/starwars-img4.png" alt="Imagem do produto XYF">
+            <img class="gallery__product--img" src="./imgs/starwars-img4.png" alt="Imagem do produto XYF">
             <p class="gallery__product--description">Produto XYF</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
           <div class="gallery__product gallery__product--desktop">
-            <img class="gallery__product--img" src="/imgs/starwars-img5.png" alt="Imagem do produto XYF">
+            <img class="gallery__product--img" src="./imgs/starwars-img5.png" alt="Imagem do produto XYF">
             <p class="gallery__product--description">Produto XYF</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
           <div class="gallery__product gallery__product--desktop">
-            <img class="gallery__product--img" src="/imgs/starwars-img6.png" alt="Imagem do produto XYF">
+            <img class="gallery__product--img" src="./imgs/starwars-img6.png" alt="Imagem do produto XYF">
             <p class="gallery__product--description">Produto XYF</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
@@ -97,37 +97,37 @@
         </div>
         <div class="gallery__products">
           <div class="gallery__product">
-            <img class="gallery__product--img" src="/imgs/devices-img1.png" alt="Imagem do produto XYF">
+            <img class="gallery__product--img" src="./imgs/devices-img1.png" alt="Imagem do produto XYF">
             <p class="gallery__product--description">Controle XYZ</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
           <div class="gallery__product">
-            <img class="gallery__product--img" src="/imgs/devices-img2.png" alt="Imagem do produto XYF">
+            <img class="gallery__product--img" src="./imgs/devices-img2.png" alt="Imagem do produto XYF">
             <p class="gallery__product--description">Controle e console XYF</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
           <div class="gallery__product">
-            <img class="gallery__product--img" src="/imgs/devices-img3.png" alt="Imagem do produto XYF">
+            <img class="gallery__product--img" src="./imgs/devices-img3.png" alt="Imagem do produto XYF">
             <p class="gallery__product--description">Console XYF</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
           <div class="gallery__product">
-            <img class="gallery__product--img" src="/imgs/devices-img4.png" alt="Imagem do produto XYF">
+            <img class="gallery__product--img" src="./imgs/devices-img4.png" alt="Imagem do produto XYF">
             <p class="gallery__product--description">Controle XYF</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
           <div class="gallery__product gallery__product--desktop">
-            <img class="gallery__product--img" src="/imgs/devices-img5.png" alt="Imagem do produto XYF">
+            <img class="gallery__product--img" src="./imgs/devices-img5.png" alt="Imagem do produto XYF">
             <p class="gallery__product--description">Console XYF</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
           <div class="gallery__product gallery__product--desktop">
-            <img class="gallery__product--img" src="/imgs/devices-img6.png" alt="Imagem do produto XYF">
+            <img class="gallery__product--img" src="./imgs/devices-img6.png" alt="Imagem do produto XYF">
             <p class="gallery__product--description">Game Boy Color</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
@@ -145,37 +145,37 @@
         </div>
         <div class="gallery__products">
           <div class="gallery__product">
-            <img class="gallery__product--img" src="/imgs/otherproducts-img1.png" alt="Imagem do produto XYF">
+            <img class="gallery__product--img" src="./imgs/otherproducts-img1.png" alt="Imagem do produto XYF">
             <p class="gallery__product--description">Camisa Atari</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
           <div class="gallery__product">
-            <img class="gallery__product--img" src="/imgs/otherproducts-img2.png" alt="Imagem do produto XYF">
+            <img class="gallery__product--img" src="./imgs/otherproducts-img2.png" alt="Imagem do produto XYF">
             <p class="gallery__product--description">Camisa SNES</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
           <div class="gallery__product">
-            <img class="gallery__product--img" src="/imgs/otherproducts-img3.png" alt="Imagem do produto XYF">
+            <img class="gallery__product--img" src="./imgs/otherproducts-img3.png" alt="Imagem do produto XYF">
             <p class="gallery__product--description">Controle e console XYF</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
           <div class="gallery__product">
-            <img class="gallery__product--img" src="/imgs/otherproducts-img4.png" alt="Imagem do produto XYF">
+            <img class="gallery__product--img" src="./imgs/otherproducts-img4.png" alt="Imagem do produto XYF">
             <p class="gallery__product--description">Controle e console XYF</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
           <div class="gallery__product gallery__product--desktop">
-            <img class="gallery__product--img" src="/imgs/otherproducts-img5.png" alt="Imagem do produto XYF">
+            <img class="gallery__product--img" src="./imgs/otherproducts-img5.png" alt="Imagem do produto XYF">
             <p class="gallery__product--description">Controle e console XYF</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
           <div class="gallery__product gallery__product--desktop">
-            <img class="gallery__product--img" src="/imgs/otherproducts-img6.png" alt="Imagem do produto XYF">
+            <img class="gallery__product--img" src="./imgs/otherproducts-img6.png" alt="Imagem do produto XYF">
             <p class="gallery__product--description">Controle e console XYF</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
@@ -189,7 +189,7 @@
   <footer>
     <section class="footer__aboutus">
       <h1 class="footer__logo-container">
-        <img class="footer__logo" src="/imgs/logo.svg" alt="logotipo da AluraGeek">
+        <img class="footer__logo" src="./imgs/logo.svg" alt="logotipo da AluraGeek">
       </h1>
       <nav class="footer__menu">
         <ul>
