--- a/index-home.html
+++ b/index-home.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="./css/footer-developer.css">
 </head>
 <body>
-  <header class="header">
+  <!-- <header class="header">
     <div class="header__logo-search">
       <img src="./imgs/logo.svg" alt="Logotipo da AluraGeek" class="header__logo">
       <div class="header__search">
@@ -28,8 +28,12 @@
     <div class="header__searchmobile">
       <img class="header__search--icon" src="./imgs/searchiconmobile.svg" alt="Botão de pesquisa">
     </div>
-  </header>
+  </header> -->
 
+  <header class="header">
+    <script language="javascript" type="text/javascript" src="./header.txt"></script>
+  </header>
+  
   <main>
     <section class="banner">
       <div class="banner__content">
@@ -187,6 +191,10 @@
   </main>
 
   <footer>
+    <script language="javascript" type="text/javascript" src="./footer.txt"></script>
+  </footer>
+  
+  <!-- <footer>
     <section class="footer__aboutus">
       <h1 class="footer__logo-container">
         <img class="footer__logo" src="./imgs/logo.svg" alt="logotipo da AluraGeek">
@@ -216,6 +224,6 @@
     <section class="footer__developer">
         <p class="footer__developer--text">Desenvolvido por Diego Ferreira<br>2022</p>
     </section>
-  </footer>
+  </footer> -->
 </body>
 </html>
