--- a/manager-addproduct.html
+++ b/manager-addproduct.html
@@ -21,7 +21,42 @@
   </header>
 
   <main>
-    
+    <section class="add">
+      <h1 class="add__title">Adicionar novo produto</h1>
+      <form class="add__form" action="">
+        <input class="add__form--imginput" type="file" accept="image/*" required id="add-img">
+        <div class="add__form--img">
+          <div class="add__form--imgdrop">
+            <div class="add__form--imgdrop--icon"></div>
+            <p class="add__form--imgdrop--text">Arraste para adicionar uma imagem para o produto</p>
+          </div>
+          <label class="add__form--imgbutton" for="add-img">
+            <div class="add__form--imgbutton--container">
+              <p class="add__form--imgbutton--text">Ou</p>
+              <p class="add__form--imgbutton--button tablet whtbutton">Procure no seu tablet</p>
+              <p class="add__form--imgbutton--button desk whtbutton">Procure no seu computador</p>
+            </div>
+          </label>
+        </div>
+        <label class="add__form--imgmobile--label" for="add-img">
+          <div class="add__form--imgmobile">
+            <div class="add__form--imgmobile--plus"></div>
+            <p class="add__form--imgmobile--text">Adicionar uma imagem para o produto</p>
+          </div>
+        </label>
+        
+        <div class="add__form--block">
+          <label class="add__form--label" for="name">Nome do produto</label>
+          <input class="add__form--input" type="text" name="name" id="name" required>
+        </div>
+        <div class="add__form--block">
+          <label class="add__form--label" for="price">Preço do produto</label>
+          <input class="add__form--input" type="number" name="price" id="price" required>
+        </div>
+        <textarea class="add__form--description" type="" name="description" id="description" required placeholder="Descrição do produto"></textarea>
+        <input class="add__form--button bluebutton" type="submit" value="Adicionar Produto">
+      </form>
+    </section>
   </main>
 
   <footer>
