--- a/index-home.html
+++ b/index-home.html
@@ -13,7 +13,6 @@
   <link rel="stylesheet" href="./css/main-banner.css">
   <link rel="stylesheet" href="./css/main-gallery.css">
   <link rel="stylesheet" href="./css/footer-aboutus.css">
-  <link rel="stylesheet" href="./css/footer-developer.css">
 </head>
 <body>
   <!-- <header class="header">
@@ -53,38 +52,38 @@
         </div>
         <div class="gallery__products">
           <div class="gallery__product">
-            <img class="gallery__product--img" src="./imgs/starwars-img1.png" alt="Imagem do produto XYF">
-            <p class="gallery__product--description">Produto XYF</p>
+            <img class="gallery__product--img" src="./imgs/starwars-img1.png" alt="Imagem do produto XYZ">
+            <p class="gallery__product--description">Produto XYZ</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
           <div class="gallery__product">
-            <img class="gallery__product--img" src="./imgs/starwars-img2.png" alt="Imagem do produto XYF">
-            <p class="gallery__product--description">Produto XYF</p>
+            <img class="gallery__product--img" src="./imgs/starwars-img2.png" alt="Imagem do produto XYZ">
+            <p class="gallery__product--description">Produto XYZ</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
           <div class="gallery__product">
-            <img class="gallery__product--img" src="./imgs/starwars-img3.png" alt="Imagem do produto XYF">
-            <p class="gallery__product--description">Produto XYF</p>
+            <img class="gallery__product--img" src="./imgs/starwars-img3.png" alt="Imagem do produto XYZ">
+            <p class="gallery__product--description">Produto XYZ</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
           <div class="gallery__product">
-            <img class="gallery__product--img" src="./imgs/starwars-img4.png" alt="Imagem do produto XYF">
-            <p class="gallery__product--description">Produto XYF</p>
+            <img class="gallery__product--img" src="./imgs/starwars-img4.png" alt="Imagem do produto XYZ">
+            <p class="gallery__product--description">Produto XYZ</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
           <div class="gallery__product gallery__product--desktop">
-            <img class="gallery__product--img" src="./imgs/starwars-img5.png" alt="Imagem do produto XYF">
-            <p class="gallery__product--description">Produto XYF</p>
+            <img class="gallery__product--img" src="./imgs/starwars-img5.png" alt="Imagem do produto XYZ">
+            <p class="gallery__product--description">Produto XYZ</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
           <div class="gallery__product gallery__product--desktop">
-            <img class="gallery__product--img" src="./imgs/starwars-img6.png" alt="Imagem do produto XYF">
-            <p class="gallery__product--description">Produto XYF</p>
+            <img class="gallery__product--img" src="./imgs/starwars-img6.png" alt="Imagem do produto XYZ">
+            <p class="gallery__product--description">Produto XYZ</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
@@ -101,37 +100,37 @@
         </div>
         <div class="gallery__products">
           <div class="gallery__product">
-            <img class="gallery__product--img" src="./imgs/devices-img1.png" alt="Imagem do produto XYF">
+            <img class="gallery__product--img" src="./imgs/devices-img1.png" alt="Imagem do produto XYZ">
             <p class="gallery__product--description">Controle XYZ</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
           <div class="gallery__product">
-            <img class="gallery__product--img" src="./imgs/devices-img2.png" alt="Imagem do produto XYF">
-            <p class="gallery__product--description">Controle e console XYF</p>
+            <img class="gallery__product--img" src="./imgs/devices-img2.png" alt="Imagem do produto XYZ">
+            <p class="gallery__product--description">Controle e console XYZ</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
           <div class="gallery__product">
-            <img class="gallery__product--img" src="./imgs/devices-img3.png" alt="Imagem do produto XYF">
-            <p class="gallery__product--description">Console XYF</p>
+            <img class="gallery__product--img" src="./imgs/devices-img3.png" alt="Imagem do produto XYZ">
+            <p class="gallery__product--description">Console XYZ</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
           <div class="gallery__product">
-            <img class="gallery__product--img" src="./imgs/devices-img4.png" alt="Imagem do produto XYF">
-            <p class="gallery__product--description">Controle XYF</p>
+            <img class="gallery__product--img" src="./imgs/devices-img4.png" alt="Imagem do produto XYZ">
+            <p class="gallery__product--description">Controle XYZ</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
           <div class="gallery__product gallery__product--desktop">
-            <img class="gallery__product--img" src="./imgs/devices-img5.png" alt="Imagem do produto XYF">
-            <p class="gallery__product--description">Console XYF</p>
+            <img class="gallery__product--img" src="./imgs/devices-img5.png" alt="Imagem do produto XYZ">
+            <p class="gallery__product--description">Console XYZ</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
           <div class="gallery__product gallery__product--desktop">
-            <img class="gallery__product--img" src="./imgs/devices-img6.png" alt="Imagem do produto XYF">
+            <img class="gallery__product--img" src="./imgs/devices-img6.png" alt="Imagem do produto XYZ">
             <p class="gallery__product--description">Game Boy Color</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
@@ -149,38 +148,38 @@
         </div>
         <div class="gallery__products">
           <div class="gallery__product">
-            <img class="gallery__product--img" src="./imgs/otherproducts-img1.png" alt="Imagem do produto XYF">
+            <img class="gallery__product--img" src="./imgs/otherproducts-img1.png" alt="Imagem do produto XYZ">
             <p class="gallery__product--description">Camisa Atari</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
           <div class="gallery__product">
-            <img class="gallery__product--img" src="./imgs/otherproducts-img2.png" alt="Imagem do produto XYF">
+            <img class="gallery__product--img" src="./imgs/otherproducts-img2.png" alt="Imagem do produto XYZ">
             <p class="gallery__product--description">Camisa SNES</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
           <div class="gallery__product">
-            <img class="gallery__product--img" src="./imgs/otherproducts-img3.png" alt="Imagem do produto XYF">
-            <p class="gallery__product--description">Controle e console XYF</p>
+            <img class="gallery__product--img" src="./imgs/otherproducts-img3.png" alt="Imagem do produto XYZ">
+            <p class="gallery__product--description">Controle e console XYZ</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
           <div class="gallery__product">
-            <img class="gallery__product--img" src="./imgs/otherproducts-img4.png" alt="Imagem do produto XYF">
-            <p class="gallery__product--description">Controle e console XYF</p>
+            <img class="gallery__product--img" src="./imgs/otherproducts-img4.png" alt="Imagem do produto XYZ">
+            <p class="gallery__product--description">Controle e console XYZ</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
           <div class="gallery__product gallery__product--desktop">
-            <img class="gallery__product--img" src="./imgs/otherproducts-img5.png" alt="Imagem do produto XYF">
-            <p class="gallery__product--description">Controle e console XYF</p>
+            <img class="gallery__product--img" src="./imgs/otherproducts-img5.png" alt="Imagem do produto XYZ">
+            <p class="gallery__product--description">Controle e console XYZ</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
           <div class="gallery__product gallery__product--desktop">
-            <img class="gallery__product--img" src="./imgs/otherproducts-img6.png" alt="Imagem do produto XYF">
-            <p class="gallery__product--description">Controle e console XYF</p>
+            <img class="gallery__product--img" src="./imgs/otherproducts-img6.png" alt="Imagem do produto XYZ">
+            <p class="gallery__product--description">Controle e console XYZ</p>
             <p class="gallery__product--price">R$ 60,00</p>
             <a class="gallery__product--seeproduct" href="#">Ver produto</a>
           </div>
