criado pagina de todos os produtos

--- a/manager-allproducts.html
+++ b/manager-allproducts.html
@@ -23,119 +23,116 @@
     <section class="allprod">
       <div class="allprod__header">
         <h1 class="allprod__title">Todos os Produtos</h1>
-        <a class="allprod__seeall" href="#">
-          <p class="allprod__seeall--text">Ver tudo</p>
-          <div class="allprod__seeall--img"></div>
-        </a>
+        <a href="./manager-addproduct.html"><button class="allprod__addbutton bluebutton">Adicionar produto</button></a>
       </div>
       <div class="allprod__products">
         <div class="allprod__product">
           <img class="allprod__product--img" src="./imgs/starwars-img1.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Produto XYZ</p>
           <p class="allprod__product--price">R$ 60,00</p>
-          <a class="allprod__product--seeproduct" href="#">Ver produto</a>
+          <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product">
           <img class="allprod__product--img" src="./imgs/starwars-img2.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Produto XYZ</p>
           <p class="allprod__product--price">R$ 60,00</p>
-          <a class="allprod__product--seeproduct" href="#">Ver produto</a>
+          <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product">
           <img class="allprod__product--img" src="./imgs/starwars-img3.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Produto XYZ</p>
           <p class="allprod__product--price">R$ 60,00</p>
-          <a class="allprod__product--seeproduct" href="#">Ver produto</a>
+          <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product">
           <img class="allprod__product--img" src="./imgs/starwars-img4.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Produto XYZ</p>
           <p class="allprod__product--price">R$ 60,00</p>
-          <a class="allprod__product--seeproduct" href="#">Ver produto</a>
+          <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product allprod__product--desktop">
           <img class="allprod__product--img" src="./imgs/starwars-img5.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Produto XYZ</p>
           <p class="allprod__product--price">R$ 60,00</p>
-          <a class="allprod__product--seeproduct" href="#">Ver produto</a>
+          <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product allprod__product--desktop">
           <img class="allprod__product--img" src="./imgs/starwars-img6.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Produto XYZ</p>
           <p class="allprod__product--price">R$ 60,00</p>
-          <a class="allprod__product--seeproduct" href="#">Ver produto</a>
+          <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product">
           <img class="allprod__product--img" src="./imgs/devices-img1.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Controle XYZ</p>
           <p class="allprod__product--price">R$ 60,00</p>
-          <a class="allprod__product--seeproduct" href="#">Ver produto</a>
+          <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product">
           <img class="allprod__product--img" src="./imgs/devices-img2.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Controle e console XYZ</p>
           <p class="allprod__product--price">R$ 60,00</p>
-          <a class="allprod__product--seeproduct" href="#">Ver produto</a>
+          <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product">
           <img class="allprod__product--img" src="./imgs/devices-img3.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Console XYZ</p>
           <p class="allprod__product--price">R$ 60,00</p>
-          <a class="allprod__product--seeproduct" href="#">Ver produto</a>
+          <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product">
           <img class="allprod__product--img" src="./imgs/devices-img4.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Controle XYZ</p>
           <p class="allprod__product--price">R$ 60,00</p>
-          <a class="allprod__product--seeproduct" href="#">Ver produto</a>
+          <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product allprod__product--desktop">
           <img class="allprod__product--img" src="./imgs/devices-img5.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Console XYZ</p>
           <p class="allprod__product--price">R$ 60,00</p>
-          <a class="allprod__product--seeproduct" href="#">Ver produto</a>
+          <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product allprod__product--desktop">
           <img class="allprod__product--img" src="./imgs/devices-img6.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Game Boy Color</p>
           <p class="allprod__product--price">R$ 60,00</p>
-          <a class="allprod__product--seeproduct" href="#">Ver produto</a>
+          <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product">
           <img class="allprod__product--img" src="./imgs/otherproducts-img1.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Camisa Atari</p>
           <p class="allprod__product--price">R$ 60,00</p>
-          <a class="allprod__product--seeproduct" href="#">Ver produto</a>
+          <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product">
           <img class="allprod__product--img" src="./imgs/otherproducts-img2.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Camisa SNES</p>
           <p class="allprod__product--price">R$ 60,00</p>
-          <a class="allprod__product--seeproduct" href="#">Ver produto</a>
+          <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product">
           <img class="allprod__product--img" src="./imgs/otherproducts-img3.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Controle e console XYZ</p>
           <p class="allprod__product--price">R$ 60,00</p>
-          <a class="allprod__product--seeproduct" href="#">Ver produto</a>
+          <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product">
           <img class="allprod__product--img" src="./imgs/otherproducts-img4.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Controle e console XYZ</p>
           <p class="allprod__product--price">R$ 60,00</p>
-          <a class="allprod__product--seeproduct" href="#">Ver produto</a>
+          <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product allprod__product--desktop">
           <img class="allprod__product--img" src="./imgs/otherproducts-img5.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Controle e console XYZ</p>
           <p class="allprod__product--price">R$ 60,00</p>
-          <a class="allprod__product--seeproduct" href="#">Ver produto</a>
+          <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product allprod__product--desktop">
           <img class="allprod__product--img" src="./imgs/otherproducts-img6.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Controle e console XYZ</p>
           <p class="allprod__product--price">R$ 60,00</p>
-          <a class="allprod__product--seeproduct" href="#">Ver produto</a>
+          <p class="allprod__product--prodcode">#1111111</p>
         </div>
       </div>
     </section>
