--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&family=Raleway:wght@200,300,400;500;600;700&display=swap">
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./css/header.css">
-  <link rel="stylesheet" href="./css/main-banner.css">
-  <link rel="stylesheet" href="./css/main-gallery.css">
-  <link rel="stylesheet" href="./css/footer-aboutus.css">
+  <link rel="stylesheet" href="./css/index-banner.css">
+  <link rel="stylesheet" href="./css/index-gallery.css">
+  <link rel="stylesheet" href="./css/footer.css">
 </head>
 <body>
   <!-- <header class="header">
