--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./css/header.css">
   <link rel="stylesheet" href="./css/login.css">
-  <link rel="stylesheet" href="./css/footer-aboutus.css">
+  <link rel="stylesheet" href="./css/footer.css">
 </head>
 <body>
 
