criado arquivo main.js e criado funcionalidade para adicionar imagem na pagina de adicionar produto utilizando arrasta e solta img com mouse

--- a/manager-addproduct.html
+++ b/manager-addproduct.html
@@ -25,7 +25,7 @@
       <form class="add__form" action="">
         <input class="add__form--imginput" type="file" accept="image/*" required id="add-img">
         <div class="add__form--img">
-          <div class="add__form--imgdrop">
+          <div class="add__form--imgdrop" data-imgdrop>
             <div class="add__form--imgdrop--icon"></div>
             <p class="add__form--imgdrop--text">Arraste para adicionar uma imagem para o produto</p>
           </div>
@@ -61,6 +61,7 @@
   <footer>
     <script language="javascript" type="text/javascript" src="./footer.txt"></script>
   </footer>
-  
+
+  <script src="./main.js" type="module"></script>  
 </body>
 </html>
