--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="./imgs/logomark.svg" type="image/icon type">
   <title>AluraGeek</title>
   <link rel="stylesheet" href="./reset.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&family=Raleway:wght@200,300,400;500;600;700&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&family=Raleway:wght@200;300;400;500;600;700&display=swap">
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./css/header.css">
   <link rel="stylesheet" href="./css/index-banner.css">
