alterado modo de renderizar header e footer. Criado arquivo html para cada um e criado scrip js para renderizar em cada pagina. Foi aterado também organização das pastas. Criado uma pasta assets para todas as imgs e css e js compartilhados, alem dos arquivos footer e header html. E foi criado uma pasta para cada pagina (adicionar, produto, produtos, home e login) com um arquivo index.html dentro

--- a/produtos/index.html
+++ b/produtos/index.html
@@ -4,132 +4,129 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="./imgs/logomark.svg" type="image/icon type">
+  <link rel="icon" href="../assets/imgs/logomark.svg" type="image/icon type">
   <title>AluraGeek</title>
-  <link rel="stylesheet" href="./reset.css">
+  <link rel="stylesheet" href="../assets/reset.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&family=Raleway:wght@400;500;600;700&display=swap">
-  <link rel="stylesheet" href="./style.css">
-  <link rel="stylesheet" href="./css/header.css">
-  <link rel="stylesheet" href="./css/manager-allproducts.css">
-  <link rel="stylesheet" href="./css/footer.css">
+  <link rel="stylesheet" href="../assets/style.css">
+  <link rel="stylesheet" href="../assets/css/header.css">
+  <link rel="stylesheet" href="./manager-allproducts.css">
+  <link rel="stylesheet" href="../assets/css/footer.css">
 </head>
 <body>
-
-  <header class="header">
-    <script language="javascript" type="text/javascript" src="./header.txt"></script>
-  </header>
+  <header class="header" data-header></header>
 
   <main>
     <section class="allprod">
       <div class="allprod__header">
         <h1 class="allprod__title">Todos os Produtos</h1>
-        <a href="./manager-addproduct.html"><button class="allprod__addbutton bluebutton">Adicionar produto</button></a>
+        <a href="../adicionar/"><button class="allprod__addbutton bluebutton">Adicionar produto</button></a>
       </div>
       <div class="allprod__products">
         <div class="allprod__product">
-          <img class="allprod__product--img" src="./imgs/starwars-img1.png" alt="Imagem do produto XYZ">
+          <img class="allprod__product--img" src="../assets/imgs/starwars-img1.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Produto XYZ</p>
           <p class="allprod__product--price">R$ 60,00</p>
           <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product">
-          <img class="allprod__product--img" src="./imgs/starwars-img2.png" alt="Imagem do produto XYZ">
+          <img class="allprod__product--img" src="../assets/imgs/starwars-img2.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Produto XYZ</p>
           <p class="allprod__product--price">R$ 60,00</p>
           <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product">
-          <img class="allprod__product--img" src="./imgs/starwars-img3.png" alt="Imagem do produto XYZ">
+          <img class="allprod__product--img" src="../assets/imgs/starwars-img3.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Produto XYZ</p>
           <p class="allprod__product--price">R$ 60,00</p>
           <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product">
-          <img class="allprod__product--img" src="./imgs/starwars-img4.png" alt="Imagem do produto XYZ">
+          <img class="allprod__product--img" src="../assets/imgs/starwars-img4.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Produto XYZ</p>
           <p class="allprod__product--price">R$ 60,00</p>
           <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product allprod__product--desktop">
-          <img class="allprod__product--img" src="./imgs/starwars-img5.png" alt="Imagem do produto XYZ">
+          <img class="allprod__product--img" src="../assets/imgs/starwars-img5.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Produto XYZ</p>
           <p class="allprod__product--price">R$ 60,00</p>
           <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product allprod__product--desktop">
-          <img class="allprod__product--img" src="./imgs/starwars-img6.png" alt="Imagem do produto XYZ">
+          <img class="allprod__product--img" src="../assets/imgs/starwars-img6.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Produto XYZ</p>
           <p class="allprod__product--price">R$ 60,00</p>
           <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product">
-          <img class="allprod__product--img" src="./imgs/devices-img1.png" alt="Imagem do produto XYZ">
+          <img class="allprod__product--img" src="../assets/imgs/devices-img1.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Controle XYZ</p>
           <p class="allprod__product--price">R$ 60,00</p>
           <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product">
-          <img class="allprod__product--img" src="./imgs/devices-img2.png" alt="Imagem do produto XYZ">
+          <img class="allprod__product--img" src="../assets/imgs/devices-img2.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Controle e console XYZ</p>
           <p class="allprod__product--price">R$ 60,00</p>
           <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product">
-          <img class="allprod__product--img" src="./imgs/devices-img3.png" alt="Imagem do produto XYZ">
+          <img class="allprod__product--img" src="../assets/imgs/devices-img3.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Console XYZ</p>
           <p class="allprod__product--price">R$ 60,00</p>
           <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product">
-          <img class="allprod__product--img" src="./imgs/devices-img4.png" alt="Imagem do produto XYZ">
+          <img class="allprod__product--img" src="../assets/imgs/devices-img4.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Controle XYZ</p>
           <p class="allprod__product--price">R$ 60,00</p>
           <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product allprod__product--desktop">
-          <img class="allprod__product--img" src="./imgs/devices-img5.png" alt="Imagem do produto XYZ">
+          <img class="allprod__product--img" src="../assets/imgs/devices-img5.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Console XYZ</p>
           <p class="allprod__product--price">R$ 60,00</p>
           <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product allprod__product--desktop">
-          <img class="allprod__product--img" src="./imgs/devices-img6.png" alt="Imagem do produto XYZ">
+          <img class="allprod__product--img" src="../assets/imgs/devices-img6.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Game Boy Color</p>
           <p class="allprod__product--price">R$ 60,00</p>
           <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product">
-          <img class="allprod__product--img" src="./imgs/otherproducts-img1.png" alt="Imagem do produto XYZ">
+          <img class="allprod__product--img" src="../assets/imgs/otherproducts-img1.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Camisa Atari</p>
           <p class="allprod__product--price">R$ 60,00</p>
           <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product">
-          <img class="allprod__product--img" src="./imgs/otherproducts-img2.png" alt="Imagem do produto XYZ">
+          <img class="allprod__product--img" src="../assets/imgs/otherproducts-img2.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Camisa SNES</p>
           <p class="allprod__product--price">R$ 60,00</p>
           <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product">
-          <img class="allprod__product--img" src="./imgs/otherproducts-img3.png" alt="Imagem do produto XYZ">
+          <img class="allprod__product--img" src="../assets/imgs/otherproducts-img3.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Controle e console XYZ</p>
           <p class="allprod__product--price">R$ 60,00</p>
           <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product">
-          <img class="allprod__product--img" src="./imgs/otherproducts-img4.png" alt="Imagem do produto XYZ">
+          <img class="allprod__product--img" src="../assets/imgs/otherproducts-img4.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Controle e console XYZ</p>
           <p class="allprod__product--price">R$ 60,00</p>
           <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product allprod__product--desktop">
-          <img class="allprod__product--img" src="./imgs/otherproducts-img5.png" alt="Imagem do produto XYZ">
+          <img class="allprod__product--img" src="../assets/imgs/otherproducts-img5.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Controle e console XYZ</p>
           <p class="allprod__product--price">R$ 60,00</p>
           <p class="allprod__product--prodcode">#1111111</p>
         </div>
         <div class="allprod__product allprod__product--desktop">
-          <img class="allprod__product--img" src="./imgs/otherproducts-img6.png" alt="Imagem do produto XYZ">
+          <img class="allprod__product--img" src="../assets/imgs/otherproducts-img6.png" alt="Imagem do produto XYZ">
           <p class="allprod__product--description">Controle e console XYZ</p>
           <p class="allprod__product--price">R$ 60,00</p>
           <p class="allprod__product--prodcode">#1111111</p>
@@ -138,9 +135,7 @@
     </section>
   </main>
 
-  <footer>
-    <script language="javascript" type="text/javascript" src="./footer.txt"></script>
-  </footer>
-  
+  <footer class="footer" data-footer></footer>
+  <script src="../assets/main.js"></script>
 </body>
 </html>
