--- a/login/index.html
+++ b/login/index.html
@@ -4,21 +4,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="./imgs/logomark.svg" type="image/icon type">
+  <link rel="icon" href="../assets/imgs/logomark.svg" type="image/icon type">
   <title>AluraGeek</title>
-  <link rel="stylesheet" href="./reset.css">
+  <link rel="stylesheet" href="../assets/reset.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&family=Raleway:wght@400;500;600;700&display=swap">
-  <link rel="stylesheet" href="./style.css">
-  <link rel="stylesheet" href="./css/header.css">
-  <link rel="stylesheet" href="./css/login.css">
-  <link rel="stylesheet" href="./css/footer.css">
+  <link rel="stylesheet" href="../assets/style.css">
+  <link rel="stylesheet" href="../assets/css/header.css">
+  <link rel="stylesheet" href="./login.css">
+  <link rel="stylesheet" href="../assets/css/footer.css">
 </head>
 <body>
-
-
-  <header class="header">
-    <script language="javascript" type="text/javascript" src="./header.txt"></script>
-  </header>
+  <header class="header" data-header></header>
   
   <main>
     <section class="login">
@@ -38,9 +34,7 @@
     </section>
   </main>
     
-  <footer>
-    <script language="javascript" type="text/javascript" src="./footer.txt"></script>
-  </footer>
-  
+  <footer class="footer" data-footer></footer>
+  <script src="../assets/main.js"></script>
 </body>
 </html>
