--- a/produto/index.html
+++ b/produto/index.html
@@ -4,24 +4,21 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="./imgs/logomark.svg" type="image/icon type">
+  <link rel="icon" href="../assets/imgs/logomark.svg" type="image/icon type">
   <title>AluraGeek</title>
-  <link rel="stylesheet" href="./reset.css">
+  <link rel="stylesheet" href="../assets/reset.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&family=Raleway:wght@400;500;600;700&display=swap">
-  <link rel="stylesheet" href="./style.css">
-  <link rel="stylesheet" href="./css/header.css">
-  <link rel="stylesheet" href="./css/product.css">
-  <link rel="stylesheet" href="./css/footer.css">
+  <link rel="stylesheet" href="../assets/style.css">
+  <link rel="stylesheet" href="../assets/css/header.css">
+  <link rel="stylesheet" href="./product.css">
+  <link rel="stylesheet" href="../assets/css/footer.css">
 </head>
 <body>
-
-  <header class="header">
-    <script language="javascript" type="text/javascript" src="./header.txt"></script>
-  </header>
+  <header class="header" data-header></header>
 
   <main>
     <section class="product">
-      <img src="./imgs/product.png" alt="Imagem do produto" class="product__img">
+      <img src="../assets/imgs/product.png" alt="Imagem do produto" class="product__img">
       <h1 class="product__title">Produto XYZ</h1>
       <p class="product__price">R$ 60,00</p>
       <p class="product__description">Voluptas voluptatum quibusdam similique, class debitis alias maecenas eveniet ridiculus, facilis fusce! Ullam conubia? Sociis, minima malesuada habitasse distinctio sequi aliqua malesuada. Quisque deleniti proin expedita, aliquid litora. Iste recusandae? Commodo, quia ridiculus doloribus vero dictum? Penatibus donec placeat faucibus, dolorum do. Animi porta anim magnam. Iste recusandae? Commodo, quia ridiculus doloribus vero dictum? Penatibus donec placeat faucibus, dolorum do. Animi porta anim magnam.</p> 
@@ -31,37 +28,37 @@
       <h1 class="similarproduct__title">Produtos similares</h1>
       <div class="similarproduct__products">
         <div class="similarproduct__product">
-          <img class="similarproduct__product--img" src="./imgs/devices-img1.png" alt="Imagem do produto XYZ">
+          <img class="similarproduct__product--img" src="../assets/imgs/devices-img1.png" alt="Imagem do produto XYZ">
           <p class="similarproduct__product--description">Controle XYZ</p>
           <p class="similarproduct__product--price">R$ 60,00</p>
           <a class="similarproduct__product--seeproduct" href="#">Ver produto</a>
         </div>
         <div class="similarproduct__product">
-          <img class="similarproduct__product--img" src="./imgs/starwars-img2.png" alt="Imagem do produto XYZ">
+          <img class="similarproduct__product--img" src="../assets/imgs/starwars-img2.png" alt="Imagem do produto XYZ">
           <p class="similarproduct__product--description">Produto XYZ</p>
           <p class="similarproduct__product--price">R$ 60,00</p>
           <a class="similarproduct__product--seeproduct" href="#">Ver produto</a>
         </div>
         <div class="similarproduct__product">
-          <img class="similarproduct__product--img" src="./imgs/starwars-img3.png" alt="Imagem do produto XYZ">
+          <img class="similarproduct__product--img" src="../assets/imgs/starwars-img3.png" alt="Imagem do produto XYZ">
           <p class="similarproduct__product--description">Produto XYZ</p>
           <p class="similarproduct__product--price">R$ 60,00</p>
           <a class="similarproduct__product--seeproduct" href="#">Ver produto</a>
         </div>
         <div class="similarproduct__product">
-          <img class="similarproduct__product--img" src="./imgs/starwars-img4.png" alt="Imagem do produto XYZ">
+          <img class="similarproduct__product--img" src="../assets/imgs/starwars-img4.png" alt="Imagem do produto XYZ">
           <p class="similarproduct__product--description">Produto XYZ</p>
           <p class="similarproduct__product--price">R$ 60,00</p>
           <a class="similarproduct__product--seeproduct" href="#">Ver produto</a>
         </div>
         <div class="similarproduct__product similarproduct__product--desktop">
-          <img class="similarproduct__product--img" src="./imgs/starwars-img5.png" alt="Imagem do produto XYZ">
+          <img class="similarproduct__product--img" src="../assets/imgs/starwars-img5.png" alt="Imagem do produto XYZ">
           <p class="similarproduct__product--description">Produto XYZ</p>
           <p class="similarproduct__product--price">R$ 60,00</p>
           <a class="similarproduct__product--seeproduct" href="#">Ver produto</a>
         </div>
         <div class="similarproduct__product similarproduct__product--desktop">
-          <img class="similarproduct__product--img" src="./imgs/starwars-img6.png" alt="Imagem do produto XYZ">
+          <img class="similarproduct__product--img" src="../assets/imgs/starwars-img6.png" alt="Imagem do produto XYZ">
           <p class="similarproduct__product--description">Produto XYZ</p>
           <p class="similarproduct__product--price">R$ 60,00</p>
           <a class="similarproduct__product--seeproduct" href="#">Ver produto</a>
@@ -71,9 +68,7 @@
 
   </main>
 
-  <footer>
-    <script language="javascript" type="text/javascript" src="./footer.txt"></script>
-  </footer>
-  
+  <footer class="footer" data-footer></footer>
+  <script src="../assets/main.js" type="module"></script> 
 </body>
 </html>
