Os arquivos main.js, reset.css e style.css foram inseridos nas pastas js e imgDrop.js que foi colocado na pasta adicionar. Foi modificado o nome dos arquivox index-banner e index-gallery para home-banner e home-gallery. Foi alterado o arquivo getDataAPI para buscar os dados no arquivo db.json e tratá-los criando o objeto Product, criado no arquivo Product.js. E foi criado o arquivo home.js que busca os dados do getDataAPI e trata para imprimi-los na tela home.

--- a/login/index.html
+++ b/login/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="../assets/imgs/logomark.svg" type="image/icon type">
   <title>AluraGeek</title>
-  <link rel="stylesheet" href="../assets/reset.css">
+  <link rel="stylesheet" href="../assets/css/reset.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&family=Raleway:wght@400;500;600;700&display=swap">
-  <link rel="stylesheet" href="../assets/style.css">
+  <link rel="stylesheet" href="../assets/css/style.css">
   <link rel="stylesheet" href="../assets/css/header.css">
   <link rel="stylesheet" href="./login.css">
   <link rel="stylesheet" href="../assets/css/footer.css">
@@ -35,6 +35,6 @@
   </main>
     
   <footer class="footer" data-footer></footer>
-  <script src="../assets/main.js"></script>
+  <script src="../assets/js/main.js"></script>
 </body>
 </html>
