criado funcionalidade no botao ver tudo para acessar todos os produtos da categoria escolhida

--- a/home/index.html
+++ b/home/index.html
@@ -30,7 +30,7 @@
         <div class="gallery__header">
           <h1 class="gallery__title">Star Wars</h1>
           <a class="gallery__seeall" href="#">
-            <p class="gallery__seeall--text">Ver tudo</p>
+            <p class="gallery__seeall--text" data-seeall="Star Wars">Ver tudo</p>
             <div class="gallery__seeall--img"></div>
           </a>
         </div>
@@ -41,7 +41,7 @@
         <div class="gallery__header">
           <h1 class="gallery__title">Consoles</h1>
           <a class="gallery__seeall" href="#">
-            <p class="gallery__seeall--text">Ver tudo</p>
+            <p class="gallery__seeall--text" data-seeall="Consoles">Ver tudo</p>
             <div class="gallery__seeall--img"></div>
           </a>
         </div>
@@ -52,7 +52,7 @@
         <div class="gallery__header">
           <h1 class="gallery__title">Diversos</h1>
           <a class="gallery__seeall" href="#">
-            <p class="gallery__seeall--text">Ver tudo</p>
+            <p class="gallery__seeall--text" data-seeall="Diversos">Ver tudo</p>
             <div class="gallery__seeall--img"></div>
           </a>
         </div>
