alterado id do input textarea pois estava com mesmo id do input password

--- a/assets/footer.html
+++ b/assets/footer.html
@@ -18,7 +18,7 @@
       <label class="footer__contactus--label" for="name">Nome</label>
       <input class="footer__contactus--input footer__contactus--input--name" type="text" name="name" id="name" required>
     </form>
-    <textarea class="footer__contactus--input footer__contactus--input--text" type="" name="name" id="name" required form="userForm" placeholder="Escreva sua mensagem"></textarea>
+    <textarea class="footer__contactus--input footer__contactus--input--text" type="" name="textarea" id="textarea" required form="userForm" placeholder="Escreva sua mensagem"></textarea>
     <input class="footer_contactus--button bluebutton" type="submit" value="Enviar mensagem" form="userForm">
   </div>
 </section>
