criado validações para maxlength do nome e descrição no formulario do rodapé para entrar em contato conosco

--- a/assets/footer.html
+++ b/assets/footer.html
@@ -16,9 +16,9 @@
     <h2 class="footer__contactus--title">Fale conosco</h2>
     <form class="footer__contactus--form" action="" id="userForm">
       <label class="footer__contactus--label" for="name">Nome</label>
-      <input class="footer__contactus--input footer__contactus--input--name" type="text" name="name" id="name" required>
+      <input class="footer__contactus--input footer__contactus--input--name" type="text" name="name" id="name" required maxlength="40">
     </form>
-    <textarea class="footer__contactus--input footer__contactus--input--text" type="" name="textarea" id="textarea" required form="userForm" placeholder="Escreva sua mensagem"></textarea>
+    <textarea class="footer__contactus--input footer__contactus--input--text" type="" name="textarea" id="textarea" required form="userForm" placeholder="Escreva sua mensagem" maxlength="120"></textarea>
     <input class="footer_contactus--button bluebutton" type="submit" value="Enviar mensagem" form="userForm">
   </div>
 </section>
