criado funcionalidade que pega o que foi enviado no form de adicionare produto e adiciona isso a lista em local storage

--- a/adicionar/index.html
+++ b/adicionar/index.html
@@ -21,7 +21,7 @@
       <h1 class="add__title">Adicionar novo produto</h1>
       <form class="add__form" action="" data-productform>
         <span class="add__form--span hidden" data-formspan>span</span>
-        <input class="add__form--imginput" type="file" accept="image/*" required id="add-img" data-imginput>
+        <input class="add__form--imginput" type="file" accept="image/*" required id="add-img" data-imginput name="addimg">
         <div class="add__form--img">
           <div class="add__form--imgdrop" data-imgdrop>
             <div class="add__form--imgdrop--icon"></div>
