colocado usuario e senha como placeholders e alterado senha

--- a/login/index.html
+++ b/login/index.html
@@ -23,11 +23,11 @@
       <form action="" class="login__form" data-loginform>
         <div class="login__form--block">
           <label class="login__form--label" for="email">Email</label>
-          <input class="login__form--input" type="email" name="emal" id="email" required data-useremail> 
+          <input class="login__form--input" type="email" name="emal" id="email" required data-useremail placeholder="adm@alurageek.com"> 
         </div>
         <div class="login__form--block">
           <label class="login__form--label" for="password">Senha</label>
-          <input class="login__form--input" type="password" name="password" id="password" required data-userpassword>
+          <input class="login__form--input" type="password" name="password" id="password" required data-userpassword placeholder="Adm@123">
         </div>
         <input class="login__form--button bluebutton" type="submit" value="Entrar" data-loginbutton>
       </form>
