criado funcionalidade de pesquida. todos os arquivos index foram editados para chamar o main.js como type module defino ao main.js ser o arquivo utilizado para renderizar os resultados de pesquisa

--- a/assets/header.html
+++ b/assets/header.html
@@ -1,8 +1,8 @@
 <div class="header__logo-search">
   <a href="../home/"><img src="../assets/imgs/logo.svg" alt="Logotipo da AluraGeek" class="header__logo"></a>
   <div class="header__search">
-    <input type="text" name="search" id="search" class="header__search--input" placeholder="O que deseja escontrar?">
-    <img class="header__search--icon" src="../assets/imgs/searchicon.svg" alt="Botão de pesquisa">
+    <input type="text" name="search" id="search" class="header__search--input" placeholder="O que deseja escontrar?" data-searchinput>
+    <img class="header__search--icon" src="../assets/imgs/searchicon.svg" alt="Botão de pesquisa" data-submbtt>
   </div>
 </div>
 <a href="../login"><button class="header__login whtbutton">Login</button></a>
