--- a/home/index.html
+++ b/home/index.html
@@ -63,7 +63,7 @@
   </main>
 
   <footer class="footer" data-footer></footer>
-  <script src="../assets/js/main.js"></script>
+  <script src="../assets/js/main.js" type="module"></script>
   <script src="./home.js" type="module"></script>
 </body>
 </html>
