--- a/login/index.html
+++ b/login/index.html
@@ -36,7 +36,7 @@
   </main>
     
   <footer class="footer" data-footer></footer>
-  <script src="../assets/js/main.js"></script>
+  <script src="../assets/js/main.js" type="module"></script>
   <script src="./login.js" type="module"></script>
 </body>
 </html>
