--- a/produtoscategoria/index.html
+++ b/produtoscategoria/index.html
@@ -26,7 +26,7 @@
   </main>
 
   <footer class="footer" data-footer></footer>
-  <script src="../assets/js/main.js"></script>
+  <script src="../assets/js/main.js" type="module"></script>
   <script src="./prodscategory.js" type="module"></script>
 </body>
 </html>
